--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="p5.js" defer></script>
-    <script src="sketch.js" defer></script>
-    <script src="common.js" defer></script>
-    <script src="borg.js"></script>
+    <script src="borg.js" defer></script>
     <script src="stars.js"></script>
+    <script src="audio.js"></script>
     <title>The Borg</title>
 </head>
 
-<body>
-    <main>
-    </main>
-</body>
+<body></body>
 
 </html>
